# rblxsync

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  action.yml  rblxsync.example.yml  rbxsync.example.yml  rbxsync.yml
.github/workflows/: ci.yml
.rbxsync/: state.yaml
src/: commands.rs  config.rs  lib.rs  main.rs  output.rs  state.rs
src/api/: mod.rs
